# planner

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 2024-02-18-11-52_create_user_table.py  2024-02-18-21-24_create_user_table.py  2024-02-19-08-34_create_user_table.py  2024-02-19-22-01_create_user_table.py  2024-02-23-08-46_create_user_table.py  2024-02-23-20-07_create_user_table.py
notebooks/: 2024-02-16_pydantic_basemodel_exploration.ipynb  2024-02-19_database_session_exploration.ipynb  2024-02-19_user_model_exploration.ipynb  2024-02-19_user_models_exploration.ipynb  2024-02-22_get_db_session_exploration.ipynb  2024-02-22_inject_db_session_exploration.ipynb  2024-02-22_user_manager_exploration.ipynb
src/: config.py  database.py  main.py
src/core/: models.py
src/planner/: config.py  database.py  main.py
src/planner/core/: exceptions.py  models.py  utils.py
src/planner/users/: dependencies.py  exceptions.py  managers.py  models.py  routers.py
src/todo/: models.py  schemas.py
src/todo/models/: pydantic_models.py
tests/: conftest.py  test_main.py  test_models.py  test_sample.py
tests/core/: test_models.py  test_utils.py
tests/todo/: test_models.py
tests/users/: test_managers.py  test_models.py  test_routers.py
