[project]
name = "todo"
version = "0.0.1"
description = "A to-do list using FastAPI"
authors = [
    {name = "M", email = "m@mathsistor.com"},
]
dependencies = [
    "fastapi[all]>=0.104.1",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
run-server = "uvicorn todo.main:app"
lint = "ruff check --force-exclude"
format = "ruff format --force-exclude"
test = "pytest tests"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.3",
]
lint = [
    "ruff>=0.1.7",
]
debug = [
    "jupyterlab>=4.0.9",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
select = [
    # "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # pyflakes
    "I",  # isort
    "N", # pep8-naming
    "W", # pycodestyle warnings
]
