[project]
name = "todo"
version = "0.0.1"
description = "A to-do list using FastAPI"
authors = [
    {name = "M", email = "m@mathsistor.com"},
]
dependencies = [
    "fastapi[all]>=0.109.2",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "sqlmodel>=0.0.14",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
run-server = "uvicorn todo.main:app"
lint = "ruff check --force-exclude"
format = "ruff format --force-exclude"
test = "pytest tests"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
]
lint = [
    "ruff>=0.2.1",
]
debug = [
    "jupyterlab>=4.1.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
select = [
    # "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # pyflakes
    "I",  # isort
    "N", # pep8-naming
    "W", # pycodestyle warnings
]
