[project]
name = "todo"
version = "0.0.1"
description = "A to-do list using FastAPI"
authors = [
    {name = "M", email = "m@mathsistor.com"},
]
dependencies = [
    "fastapi[all]>=0.109.2",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "sqlmodel>=0.0.16",
    "sqlalchemy[asyncio]>=2.0.27",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "dotenv run uvicorn planner.main:app"
lab = "dotenv run jupyter lab --notebook-dir=./notebooks"
test.cmd = "dotenv run pytest {args:tests}"
test.env = {USE_TEST_DB = "true"}

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.1",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
]
lint = [
    "ruff>=0.2.2",
]
debug = [
    "jupyterlab>=4.1.1",
    "rich>=13.7.0",
]
config = [
    "python-dotenv>=1.0.1",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"

[tool.ruff]
select = [
    # "D", # pydocstyle
    "E", # pycodestyle errors
    "F", # pyflakes
    "I",  # isort
    "N", # pep8-naming
    "W", # pycodestyle warnings
]
